# switch-it-up

./: README.md  hello.py  middleware.ts  package-lock.json  package.json  pyproject.toml  requirements.txt  tailwind.config.js
api/: index.py  main.py
api/clients/db/: client.py  seed_schema.sql
api/src/config/: calendar_config.py
api/src/db/: supabase.py
api/src/notion/: notion.py
api/src/routes/: calendar_routes.py  journal_routes.py
api/src/services/: gcal_service.py  gemini_service.py  journal_service.py
api/v1/: greet.py
app/: layout.tsx
app/[[...index]]/: page.tsx
app/call-log/: page.tsx
app/components/: CallLogButton.tsx  GoogleCalendarIntegration.tsx  NotionIntegration.tsx  SettingsButton.tsx  SignInButton.tsx  conversation.tsx
app/settings/: page.tsx
