[project]
name = "switch-it-up"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4>=4.13.3",
    "dotenv>=0.9.9",
    "elevenlabs>=1.51.0",
    "fastapi>=0.115.8",
    "google>=3.0.0",
    "google-generativeai>=0.8.4",
    "pydantic>=2.10.6",
    "supabase>=2.13.0",
    "uvicorn>=0.34.0",
]
